--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,11 @@
-
+* {
+	box-sizing: border-box;
+}
+.App {
+	background-color: black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	height: 60vh;
+}
